Refactor controller_handler. Removed unneccesary inputs on controller… (#22)
* Refactor controller_handler. Removed unnecessary inputs on controller. Simplify the way of working with petisco
* Removed jwt old decorator
